package com.lukire.entity;

public enum EntityShape {
    SQUARE, ELLIPSE;
}
